--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/pen.png">
+    <link rel="icon" href="/pencil.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Rooted in Curiosity</title>
   </head>
