--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
+<head>
     <meta charset="UTF-8">
     <link rel="icon" href="/pencil.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Rooted in Curiosity">
+    <meta name="keywords"
+          content="Rooted in Curiosity, curiosity, learning, exploration,Blogs ,Keneth Kipyegon ,korir,blogs">
+    <meta name="author" content="Rooted in Curiosity">
+    <meta name="theme-color" content="#ffffff">
+
     <title> Rooted in Curiosity</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+</head>
+<body>
+<div id="app"></div>
+<script type="module" src="/src/main.ts"></script>
+</body>
 </html>
