google analytics in console

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           content="Rooted in Curiosity, curiosity, learning, exploration,Blogs ,Keneth Kipyegon ,korir,blogs">
     <meta name="author" content="Rooted in Curiosity">
     <meta name="theme-color" content="#ffffff">
-
+    <meta name="google-site-verification" content="6kmWDRiY47UBYrDLXsUMi9czWl2HYJaxBMS0zKU9_fc" />
     <title> Rooted in Curiosity</title>
 </head>
 <body>
