add poppins google fonts

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta name="author" content="Rooted in Curiosity">
     <meta name="theme-color" content="#ffffff">
     <meta name="google-site-verification" content="6kmWDRiY47UBYrDLXsUMi9czWl2HYJaxBMS0zKU9_fc" />
-    <title> Rooted in Curiosity</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <title> Rooted in Curiosity-Keneth Kipyegon</title>
 </head>
 <body>
 <div id="app"></div>
